fix: fix switch title & description alignment

--- a/src/entrypoints/options/tabs/AdvancedTab.module.css
+++ b/src/entrypoints/options/tabs/AdvancedTab.module.css
@@ -112,9 +112,11 @@ main.advanced-tab {
 		flex-direction: row;
 		align-items: center;
 		gap: var(--unit-16);
+		width: 100%;
 
 		& > div:last-child {
 			display: flex;
+			flex: 1;
 			flex-direction: column;
 			align-items: center;
 			gap: var(--unit-8);
